--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -13,8 +13,9 @@ body {
 }
 
 h4 {
-    font-weight: 400;
+    font-weight: 500;
     margin: 0;
+    padding-bottom: .2em;
 }
 
 a {
@@ -26,4 +27,8 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+li {
+    padding-bottom: .2em;
 }
