--- a/templates/base.html
+++ b/templates/base.html
@@ -6,31 +6,30 @@
         <meta name="description" content="personal website of Sam Dixon." />
         <meta name="author" content="Sam Dixon" />
         <meta name="keywords" content="Sam Dixon Indianapolis IN" />
-        <link rel="stylesheet" href="/static/normalize.css" />
+        <link rel="stylesheet" href="/static/pico.min.css" />
         <link rel="stylesheet" href="/static/styles.css" />
         <link rel="icon" href="/static/img/wizard.png" sizes="any" />
         <title>sdixon</title>
-        <script src="https://unpkg.com/htmx.org@2.0.0"></script>
     </head>
     <body>
-        <div id="wrapper">
-            <nav>
-                <ul>
-                    <li><a href="/">sam dixon</a></li>
-                    <li><a href="mailto:sdixon@posteo.net">email</a></li>
-                    <li>
-                        <a
-                            href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf"
-                            target="_"
-                            >resume</a
-                    </li>
-                    <li><a href="/hits">hits</a></li>
-                </ul>
-            </nav >
-            <section id="content">
+            <div class="container">
+                <mark>sam dixon</mark>
+                <nav>
+                    <ul>
+                        <li><a href="mailto:sdixon@posteo.net">email</a></li>
+                        <li>
+                            <a
+                                href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf"
+                                target="_"
+                                >resume</a
+                        </li>
+                        <li><a href="/hits">hits</a></li>
+                    </ul>
+                </nav >
+            </div >
+            <div class="container">
                 {% block content %}
                 {% endblock %}
-            </section >
-        </div>
+            </div >
     </body>
 </html>
