--- a/templates/hits.html
+++ b/templates/hits.html
@@ -34,7 +34,7 @@
         a nice little tool that lets you jump to any link on a webpage via the
         keyboard
     </p>
-    <a href="https://lydell.github.io/LinkHints/">source</a>
+    <a href="https://lydell.github.io/LinkHints/" target="_blank"">source</a>
 </article>
 
 {% endblock %}
