--- a/templates/hits.html
+++ b/templates/hits.html
@@ -2,6 +2,14 @@
 <p>Personal list of internet 'best hits' I've found</p>
 
 <article>
+    <h5>Early Git Stories</h5>
+    <blockquote>
+        <a href="https://blog.brachiosoft.com/en/posts/git/" target="_blank">
+            A Git story: Not so fun this time
+        </a>
+    </blockquote>
+</article>
+<article>
     <h5>Early CloudFlare's architecture...</h5>
     <blockquote>
         <p>
@@ -18,7 +26,9 @@
         <footer>
             <cite
                 >—
-                <a href="https://news.ycombinator.com/item?id=22883548" target="_blank""
+                <a
+                    href="https://news.ycombinator.com/item?id=22883548"
+                    target="_blank"
                     >jgrahamc</a
                 ></cite
             >
@@ -34,7 +44,7 @@
         a nice little tool that lets you jump to any link on a webpage via the
         keyboard
     </p>
-    <a href="https://lydell.github.io/LinkHints/" target="_blank"">source</a>
+    <a href="https://lydell.github.io/LinkHints/" target="_blank">source</a>
 </article>
 
 {% endblock %}
