--- a/templates/base.html
+++ b/templates/base.html
@@ -5,31 +5,47 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="personal website of Sam Dixon." />
         <meta name="author" content="Sam Dixon" />
-        <meta name="keywords" content="Sam Dixon Indianapolis IN" />
-        <link rel="stylesheet" href="/static/pico.min.css" />
-        <link rel="stylesheet" href="/static/styles.css" />
+        <meta name="keywords" content="Sam Dixon Indianapolis, IN" />
         <link rel="icon" href="/static/img/wizard.png" sizes="any" />
         <title>sdixon</title>
     </head>
     <body>
-            <div class="container">
-                <mark>sam dixon</mark>
-                <nav>
-                    <ul>
-                        <li><a href="mailto:sdixon@posteo.net">email</a></li>
-                        <li>
-                            <a
-                                href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf"
-                                target="_"
-                                >resume</a
-                        </li>
-                        <li><a href="/hits">hits</a></li>
-                    </ul>
-                </nav >
-            </div >
-            <div class="container">
-                {% block content %}
-                {% endblock %}
-            </div >
+        <style>
+				html, body { 
+					font-family: sans-serif;
+					max-width: 30rem; 
+					color: hsl(28,26%,25%);
+					background-color: hsl(32,16%,96%);
+				}
+				h1, h3, h4 {
+					font-family: serif;
+					font-weight: 900;
+                    border-bottom: 1px dotted black;
+                    margin: 0;
+                    display: inline;
+				}
+                ul, li {
+                    list-style: none;
+                    padding: .1em;
+                    padding-left: 0;
+                }
+                a {
+                    text-decoration: none;
+                }
+        </style>
+                <header>
+                    <h3>Sam Dixon</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="{{ url_for('about') }}" {% if context.about%}style="border-bottom: 1px dotted black;"{%endif%}>me</a></li>
+                            <li><a href="{{ url_for('hits') }}" {% if context.hits_flag%}style="border-bottom: 1px dotted black;"{%endif%}>hits</a></li>
+                        </ul>
+                    </nav >
+                </header>
+                <section>
+                    {% block content %}
+                    {% endblock %}
+                </section>
+            </div>
     </body>
 </html>
